--- a/archwrt-ss.service
+++ b/archwrt-ss.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=archwrt-ss.sh transparent proxy script
 ConditionFileIsExecutable=/usr/bin/archwrt-ss.sh
-ConditionFileNotEmpty=/opt/archwrt-ss/config.json
+ConditionFileNotEmpty=/opt/archwrt-ss/archwrt-ss.conf
 Requires=network.target network-online.target
 After=network.target network-online.target
 
