--- a/archwrt-ss.conf
+++ b/archwrt-ss.conf
@@ -23,13 +23,14 @@ overwrite_resolv="true"
 # DoT and DoH                      #
 # ##################################
 # we use dnsproxy by Adguard https://github.com/AdguardTeam/dnsproxy
-# those variable will be used when "dnsproxy --upstream=${dot_doh} --port=5353"
+# those variable will be used when "dnsproxy -u ${dot_doh} -f ${dot_doh_fb} -p ${dp_port}"
 # which will create a DNS server at UDP 0.0.0.0:${dp_port},
 # using ${dot_doh} as upstream server.
 #
 
 dp_port="5053"
 dot_doh="tls://9.9.9.9" #dns_over_tls/dns_over_https for foreign domains
+dot_doh_fb="tls://dns.adguard.com" #fallback dns
 
 ####################################
 # China DNS                        #
