dnsproxy: do query in parallel

--- a/archwrt-ss.conf
+++ b/archwrt-ss.conf
@@ -29,9 +29,12 @@ overwrite_resolv="true"
 #
 
 dp_port="5053"
-dot_doh="tls://9.9.9.9" #dns_over_tls/dns_over_https for foreign domains
-dot_doh_fb="tls://dns.adguard.com" #fallback dns
 
+#dns_over_tls/dns_over_https for foreign domains
+dot_dohs=('https://mozilla.cloudflare-dns.com/dns-query'
+          'tls://9.9.9.9'
+          'tls://dns.adguard.com')
+                       
 ####################################
 # China DNS                        #
 # ##################################
