china_dns: add tip

--- a/archwrt-ss.conf
+++ b/archwrt-ss.conf
@@ -40,6 +40,8 @@ dot_dohs=('https://mozilla.cloudflare-dns.com/dns-query'
 # ##################################
 # We use 202.141.162.123#5353 for default, which is hosed by USTC LUG.
 # You can change it, if you like.
+# Tip: if you want to look up all the domains (include cdn domains) through
+# DOT & DOH just set it to 127.0.0.7#5053
 #
 china_dns="202.141.162.123" 
 china_dns_port="5353"
