add feature: custom_puredns_port

--- a/archwrt-ss.conf
+++ b/archwrt-ss.conf
@@ -22,19 +22,23 @@ overwrite_resolv="true"
 ####################################
 # DoT and DoH                      #
 # ##################################
-# we use dnsproxy by Adguard https://github.com/AdguardTeam/dnsproxy
-# those variable will be used when "dnsproxy -u ${dot_doh} -f ${dot_doh_fb} -p ${dp_port}"
+# we advise using dnsproxy by Adguard https://github.com/AdguardTeam/dnsproxy
+# those variable will be used when "dnsproxy -u ${dot_dohs[@]} -p ${dp_port}"
 # which will create a DNS server at UDP 0.0.0.0:${dp_port},
 # using ${dot_doh} as upstream server.
+# Using custom pure dns instead of dnsproxy by Adguard by setting custom_puredns_port
 #
 
-dp_port="5053"
+custom_puredns_port=""
 
-#dns_over_tls/dns_over_https for foreign domains
+dp_port="5053" # Will be ignored if custom_puredns_port is not empty.
+
+#dns_over_tls/dns_over_https for foreign domains. Will be ignored if custom_puredns_port is not empty.
+
 dot_dohs=('https://mozilla.cloudflare-dns.com/dns-query'
           'tls://9.9.9.9'
           'tls://dns.adguard.com')
-                       
+
 ####################################
 # China DNS                        #
 # ##################################
@@ -49,7 +53,7 @@ china_dns_port="5353"
 ####################################
 # DNS Redirection                  #
 # ##################################
-# Recommend for those who run this script on their routers.
+# Recommend for those who run this script on routers.
 # Set it to your router's LAN IP to forece redirect to router's DNS.
 # Set it to zero if you run this script on PCs
 lanip=""
