add tls://8.8.8.8 & tls://8.8.4.4

--- a/archwrt-ss.conf
+++ b/archwrt-ss.conf
@@ -35,7 +35,9 @@ dp_port="5053" # Will be ignored if custom_puredns_port is not empty.
 
 #dns_over_tls/dns_over_https for foreign domains. Will be ignored if custom_puredns_port is not empty.
 
-dot_dohs=('https://mozilla.cloudflare-dns.com/dns-query'
+dot_dohs=('tls://8.8.8.8'
+          'tls://8.8.4.4'
+          'https://mozilla.cloudflare-dns.com/dns-query'
           'tls://9.9.9.9'
           'tls://dns.adguard.com')
 
