manage ss-redir using systemd && change location of config file - Stop running ss-redir as root, use:       systemctl start shadowsocks-libev-redir@"${ss_config}".service   instead. ( ${ss_config}.json should be in /etc/shadowsocks )
- Let user to set their own dnsproxy.

- Change config file location from /opt/archwrt-ss to /etc/archwrt-ss

--- a/archwrt-ss.conf
+++ b/archwrt-ss.conf
@@ -3,8 +3,16 @@
 # this file will be sourced by archwrt-ss.sh on start
 #
 
+###############################
+# Current Shadowsocks Config  #
+# without .json in name       #
+###############################
+# systemctl start shadowsocks-libev-redir@${ss_config}.service
+#
+ss_config="config"
+
 ####################################
-# Current proxy mode             #
+# Current proxy mode               #
 ####################################
 # Possible values:
 # gfwlist | bypass | gamemode | global
@@ -22,24 +30,13 @@ overwrite_resolv="true"
 ####################################
 # DoT and DoH                      #
 # ##################################
-# we advise using dnsproxy by Adguard https://github.com/AdguardTeam/dnsproxy
-# those variable will be used when "dnsproxy -u ${dot_dohs[@]} -p ${dp_port}"
-# which will create a DNS server at UDP 0.0.0.0:${dp_port},
-# using ${dot_doh} as upstream server.
-# Using custom pure dns instead of dnsproxy by Adguard by setting custom_puredns_port
+# We sugguest using dnsproxy by Adguard https://github.com/AdguardTeam/dnsproxy
+# Arch Linux Package with systemd service can be found at
+# https://aur.archlinux.org/packages/dnsproxy-adguard
 #
 
-custom_puredns_port=""
-
-dp_port="5053" # Will be ignored if custom_puredns_port is not empty.
-
-#dns_over_tls/dns_over_https for foreign domains. Will be ignored if custom_puredns_port is not empty.
-
-dot_dohs=('tls://8.8.8.8'
-          'tls://8.8.4.4'
-          'https://mozilla.cloudflare-dns.com/dns-query'
-          'tls://9.9.9.9'
-          'tls://dns.adguard.com')
+puredns_service_name="dnsproxy-adguard.service" # set just for status checking
+puredns_port="5353"
 
 ####################################
 # China DNS                        #
@@ -47,7 +44,7 @@ dot_dohs=('tls://8.8.8.8'
 # We use 202.141.162.123#5353 for default, which is hosed by USTC LUG.
 # You can change it, if you like.
 # Tip: if you want to look up all the domains (include cdn domains) through
-# DOT & DOH just set it to 127.0.0.7#5053
+# your own dnsproxy just set it to 127.0.0.1#port
 #
 china_dns="202.141.162.123" 
 china_dns_port="5353"
@@ -63,18 +60,6 @@ lanip=""
 ####################################
 # Paths                            #
 ####################################
-
-# ss-redir from shadowsocks-libev 
-#
-ss_redir="/usr/bin/ss-redir"
-
-# dnsproxy by Adguard
-#
-dnsproxy="/usr/bin/dnsproxy-adguard"
-
-# path of shadowsocks's config.json
-#
-ss_config="${ss_dir}/config.json"
 
 # path of proxy rules
 #
