enable user to set special_dns

--- a/archwrt-ss.conf
+++ b/archwrt-ss.conf
@@ -52,10 +52,11 @@ china_dns_port="5353"
 ###################################
 # Special domain list             #
 ###################################
-# Use Special dns (127.0.0.1#${special_dns_port})
+# Use Special dns (${special_dns}#${special_dns_port})
 # to lookup special
 # domains
 #
+special_dns="127.0.0.1"
 special_dns_port=""
 speciallist="${ss_dir}/speciallist.txt"
 
