Seperate CDN DNS in config file

--- a/archwrt-ss.conf
+++ b/archwrt-ss.conf
@@ -50,6 +50,15 @@ china_dns="202.141.162.123"
 china_dns_port="5353"
 
 ###################################
+# CDN DNS                         #
+###################################
+# All domains in cdn.txt will use
+# this DNS. (Useful when you set China Dns to 127.0.0.1#Your_pure_dns_port)
+#
+cdn_dns="223.5.5.5"
+cdn_dns_port="53"
+
+###################################
 # Special domain list             #
 ###################################
 # Use Special dns (${special_dns}#${special_dns_port})
