add switches: puredns_managed, stop_dnsmasq_on_stop

--- a/archwrt-ss.conf
+++ b/archwrt-ss.conf
@@ -37,6 +37,8 @@ overwrite_resolv="true"
 
 puredns_service_name="dnsproxy-adguard.service" # set just for status checking
 puredns_port="5353"
+puredns_managed="false" #let archwrt-ss.sh start/stop your dnsproxy service
+stop_dnsmasq_on_stop="false"
 
 ####################################
 # China DNS                        #
