add support for v2ray (redirect mode only)

--- a/archwrt-ss.conf
+++ b/archwrt-ss.conf
@@ -3,8 +3,16 @@
 # this file will be sourced by archwrt-ss.sh on start
 #
 
+
 ###############################
-# Current Shadowsocks Config  #
+# Working Mode                #
+# ss or v2ray                 #
+###############################
+#
+working_mode=v2ray
+
+###############################
+# Current  Config             #
 # without .json in name       #
 ###############################
 # systemctl start shadowsocks-libev-redir@${ss_config}.service
