add option: dnsmasq_mode

--- a/archwrt-ss.conf
+++ b/archwrt-ss.conf
@@ -3,6 +3,12 @@
 # this file will be sourced by archwrt-ss.sh on start
 #
 
+###################################
+# Dnsmasq Mode                    #
+# systemd or nm (Network Manager) #
+###################################
+#
+dnsmasq_mode=systemd
 
 ###############################
 # Working Mode                #
