change shadowsocks-libev to shadowsocks-rust

--- a/archwrt-ss.conf
+++ b/archwrt-ss.conf
@@ -14,7 +14,7 @@ working_mode=v2ray
 # Current  Config             #
 # without .json in name       #
 ###############################
-# systemctl start shadowsocks-libev-redir@${ss_config}.service
+# systemd-run -u sslocal-rust@${ss_config}.service sslocal-rust -c /etc/shadowsocks-rust/${ss_config}.json
 #
 ss_config="config"
 
