--- a/archwrt-ss.conf
+++ b/archwrt-ss.conf
@@ -26,48 +26,31 @@ ss_config="config"
 ss_mode="gfwlist"
 
 ####################################
-# DoT and DoH                      #
+# Smart DNS                        #
 # ##################################
-# We sugguest using dnsproxy by Adguard https://github.com/AdguardTeam/dnsproxy
-# Arch Linux Package with systemd service can be found at
-# https://aur.archlinux.org/packages/dnsproxy-adguard
-#
+# we use smartdns to handle ipset and domain lookup
+smartdns_port="5354"
+smartdns_china_list=(
+  "accelerated-domains.china.smartdns.conf"
+  "apple.china.smartdns.conf"
+  "google.china.smartdns.conf"
+)
+smartdns_custom_list=(
+  # config file you want include
+)
+smartdns_cache_size="4096";
+smartdns_log_level="info";
+# set China DNS for your smartdns (-group china)
+smartdns_china=("223.5.5.5" "114.114.114.114")
 
-puredns_service_name="dnsproxy-adguard.service" # set just for status checking
-puredns_port="5353"
-puredns_managed="false" #let archwrt-ss.sh start/stop your dnsproxy service
-stop_dnsmasq_on_stop="false"
+# set dot for your smartdns (default group)
+smartdns_dot=("8.8.8.8" "1.0.0.1") 
 
-####################################
-# China DNS                        #
-# ##################################
-# We use 202.141.162.123#5353 for default, which is hosed by USTC LUG.
-# You can change it, if you like.
-# Tip: if you want to look up all the domains (include cdn domains) through
-# your own dnsproxy just set it to 127.0.0.1#port
-#
-china_dns="202.141.162.123" 
-china_dns_port="5353"
-
-###################################
-# CDN DNS                         #
-###################################
-# All domains in cdn.txt will use
-# this DNS. (Useful when you set China Dns to 127.0.0.1#Your_pure_dns_port)
-#
-cdn_dns="223.5.5.5"
-cdn_dns_port="53"
-
-###################################
-# Special domain list             #
-###################################
-# Use Special dns (${special_dns}#${special_dns_port})
-# to lookup special
-# domains
-#
-special_dns="127.0.0.1"
-special_dns_port=""
-speciallist="${ss_dir}/speciallist.txt"
+# set doh for your smartdns (default group)
+smartdns_doh=(
+  "https://1.1.1.1/dns-query"
+  "https://cloudflare-dns.com/dns-query"
+)
 
 ####################################
 # DNS Redirection                  #
@@ -85,7 +68,6 @@ lanip=""
 #
 gfwlist="${ss_dir}/gfwlist.conf"
 chnroute="${ss_dir}/chnroute.txt"
-cdn="${ss_dir}/cdn.txt"
 
 # Custom Whitelist,
 # ip/net/domain; one record each line
