smartdns: add legacy dns upstream config

--- a/archwrt-ss.conf
+++ b/archwrt-ss.conf
@@ -52,6 +52,11 @@ smartdns_doh=(
   "https://cloudflare-dns.com/dns-query"
 )
 
+# set upstream dns for your smartdns(default group)
+# format: "ip:port"
+smartdns_dns=(
+  
+)
 ####################################
 # DNS Redirection                  #
 # ##################################
